--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -1,35 +1,28 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: tfsec
-
+name: Security scanning of terraform code
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-  schedule:
-    - cron: '34 22 * * 5'
-
 jobs:
   tfsec:
-    name: Run tfsec sarif report
+    name: TFSec Sarif report
     runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
       security-events: write
-
     steps:
       - name: Clone repo
         uses: actions/checkout@v3
-
-      - name: Run tfsec
-        uses: aquasecurity/tfsec-sarif-action@9a83b5c3524f825c020e356335855741fd02745f
         with:
-          sarif_file: tfsec.sarif
+          persist-credentials: false
+
+      - name: tfsec scan
+        uses: aquasecurity/tfsec-sarif-action@v0.1.0
+        with:
+          working_directory: infra/terraform
+          sarif_file: tfsec.sarif          
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
